# dentistry

./: .gitignore  CLAUDE.md  Makefile  dev-down.ps1  dev-local.ps1  dev-up.ps1  docker-compose.yml  start.bat  stop.bat  тема-дипломної.txt
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260515_0001_initial_schema.py  20260515_0002_doctor_extra_fields.py  20260515_0003_clinic_social_extra.py  20260515_0004_service_category.py  20260526_0005_extra_social_networks.py  20260526_0006_before_after_cases.py  20260526_0007_contact_messages.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  appointment.py  base_mixins.py  before_after.py  clinic_settings.py  contact_message.py  doctor_profile.py  expense.py  expense_category.py  notification.py  patient_card.py  patient_note.py  payment.py  position.py  promo_code.py  review.py  schedule.py  schedule_exception.py  service.py  user.py
backend/app/schemas/: appointment.py  auth.py  before_after.py  clinic_settings.py  contact_message.py  doctor.py  expense.py  expense_category.py  finance.py  notification.py  patient_card.py  payment.py  position.py  promo_code.py  review.py  service.py
backend/app/services/: appointments.py  (+8 more)
backend/scripts/: seed_admin.py  seed_before_after.py  seed_demo.py  seed_doctor_details.py  seed_reviews.py  seed_service_categories.py
backend/tests/: conftest.py  test_appointments.py  test_auth.py
(+63 files in other folders)
