[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "dentistry-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.111",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "pwdlib[argon2]>=0.2",
    "python-multipart>=0.0.9",
    "pillow>=10.3",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
